# fran

./: .gitignore  .gitmodules  .nvimlog  AGENTS.md  BENCHMARK_CONTEXT.md  CMakeLists.txt  HPC_PREPROC_CONTEXT.md  NAS.md  README.md  __init__.py  avante.md  codex_res.sh  compile_commands.json  conda_oneliners.txt  constraints-hpc.txt  constraints.txt  gt_fns_with_label1.csv  migration_nnunetv2.md  plans.db  plans2.db  pyproject.toml  pyproject_sl.toml  pyproject_slicer.toml  req_slicer.txt  requirements.txt  requirements_py310.txt  setup.py  setup_bk.py  tmp.txt
.codex/agents/: config.toml
agent/: upload_dataset_rsync.sh
agent/webapp/: README.md  __main__.py  cli.py
configurations/: experiment_configs (Copy).xlsx  experiment_configs.xlsx  experiment_configs_litsmall.xlsx  experiment_configs_liver.xlsx  experiment_configs_lung.xlsx  experiment_configs_lungs.xlsx  experiment_configs_nodes.xlsx  experiment_configs_nodes_hpc.xlsx  experiment_configs_totalseg.xlsx  nnunet_settings.docx
configurations (Copy)/: experiment_configs_liver.xlsx  experiment_configs_lungs.xlsx  experiment_configs_nodes.xlsx  experiment_configs_totalseg.xlsx
docs/: wandb.md
fran/: .py_import_completer.db  .py_import_completer.db-journal  LOCALISER_INFERENCE_CONTEXT.md  __init__.py  dest.csv  df.csv  fit-perf_logs.txt  importlib  issues.csv  model_summary.txt  org.csv  os  rope.py  shutil  sys  train.csv  train.py  train1.csv  train2.csv  train_prefitted.csv  train_retry.py  val.csv  val_prefitted.csv  valid.csv  valid1.csv  wandb  wandb_runs.csv
fran.egg-info/: PKG-INFO  SOURCES.txt
fran/agent/: train.py
fran/api/: dcm_inference.py  inference.py
fran/architectures/: convlstm.py  create_network.py  dynunet.py  gan.py  gan2d.py  nnunet.py  nnunet_bk.py  res_unet_planner.py  unetcraig.py
fran/callback/: base.py  callback.py  case_ids_json_tracker.py  case_recorder.py  case_recorder_bk.py  case_recorder_fa.py  crash_dump.py  debug_epoch_limit.py  incremental.py  lr_monitor_minimal.py  modelcheckpoint.py  nep.py  nept.py  neptune.py  neptune_bk.py  test.py  tune.py  wandb.py  wandb_ckpt.py
fran/configs/: helpers.py  mnemonics.py  parser.py
fran/cpp/: CMakeLists.txt  CMakePresets.json  bbox_stats_itk.cpp  bboxes_info.cxx  bboxes_info.h  bboxviewer.cxx  bboxviewer.h  compile_commands.json  helpers.py  numpy_to_itk.h  torch_to_itk.h  vtk_labelmap_view.cxx  vtk_labelmap_view.h
fran/cpp/dashboard/: CMakeLists.txt  CMakePresets.json  vcpkg.json
fran/cpp/dashboard/.cache/clangd/index/: franproject.cpp.1A0F380B7D7D6F30.idx  franproject.h.83925942AF8297DE.idx  main.cpp.BD1E15635CC627EF.idx  mainwindow.cpp.2275E229FDD9EEEF.idx  mainwindow.h.1D7A03AEE26CBE8B.idx  plansmodel.cpp.4EFCF4AA58DB210B.idx  plansmodel.h.56634A495717FD48.idx  projectview.cpp.131F46A7601D30CB.idx  projectview.h.112BD9AE9C1D4976.idx  python_env.cpp.D28DAB5BBDE9C10D.idx  python_env.h.B7D553FC21BD7BBD.idx
fran/cpp/dashboard/include/: cuda_utils.h  franproject.h  inference.h  mainwindow.h  plansmodel.h  python_env.h  training.h  trainingcontroller.h
fran/cpp/dashboard/src/: cuda_utils.cxx  franproject.cpp  inference.cxx  main.cpp  mainwindow.cpp  mainwindow.ui  plansmodel.cpp  python_env.cpp  trainingcontroller.cxx
fran/cpp/labelmapviewer/: bboxviewer.cxx  bboxviewer.ui  compile_commands.json  pybind_bboxes.cpp  tnsr_check.cpp  vtk_labelmap_view.cxx  vtk_labelmap_view.h
fran/cpp/labelmapviewer/.cache/clangd/index/: bbox_stats_itk.cpp.009B6A7F6496DACD.idx  bboxes_info.cxx.BF403C84B6BA68D8.idx  bboxes_info.h.4D1E56B9F5C6C114.idx  bboxviewer.cxx.7276F9ECD55CE3BA.idx  bboxviewer.h.90BDFC247017AEFF.idx  numpy_to_itk.h.1649B4B3273A05B0.idx  pybind_bboxes.cpp.40D5F6D0CD0675DE.idx  tnsr_check.cpp.A39DC4BC0093B768.idx  vtk_labelmap_view.cxx.B61FCF1A4A1D0127.idx  vtk_labelmap_view.h.7C782AA72A25C7E0.idx
fran/data/: astra_tut.py  collate.py  dataloader.py  dataregistry.py  dataset.py  dataset_fastai.py  dataset_monai.py  dataset_tio.py  datasource.py  datasource_bk.py  patch_datasource.py  queues.py
fran/debugging/: __init__.py  cuda_oom.py  import_sanity.py
fran/deprecated/: add_labels_nnz_to_db.py  deprecated.py  fix_all_ckpt_keys.py  fix_ckpt_keys.py  modernize_cases_db_add_ds_type.py
fran/detect/: data.py  loss.py  model.py  preprocess.py  training.py
fran/docs/: guidance.md
fran/evaluation/: craigloss.py  losses.py  losses_bk.py  patch_stream_loss.py
fran/extra/: .gitignore  Untitled.ipynb  botorch_mac.ipynb  capestart_related.py  decorators.py  dummpy.py  filters.py  gaga.py  gan.py  gan_fastai.py  mac_exp.py  pix2pixopts.json  read_itk_labels.py  rough.py  rough2.py  rough3.py  rough4.py  sample.xlsx  training_profile.stats  transforms.py  tt.py  types.py  vae.py  vae2.py  vae_mnist.ipynb
fran/inference/: base.py  base_bk.py  base_old.py  best_runs.py  best_runs_table.py  cascade.py  cascade_old.py  cascade_yolo.py  cascade_yolo2.py  common_vars.py  ensemble.py  ensemble_inference.py  helpers.py  inference_base.py  inference_base_bk.py  inference_base_fa.py  inference_neptune_models.py  inference_neptune_models_bk.py  inference_raytune_models.py  inference_simple.py  pt_inferers.py  scoring.py  slicer.py
fran/localiser/: boss_grunt.py  cpt.py  data.py  data_tsl.py  geometry.py  helpers.py  inference.py  loss.py  model.py  pipeline_1class.py  pipeline_tsl.py  preprocess.py  preprocess_bk.py  training.py  yolo_ct_augment.py
fran/loggers/: preprocessing.py  wandb_api.py  wandb_manager.py
fran/managers/: __init__.py  base.py  base_bk.py  data.py  data_bk.py  datasource.py  datasource_bk.py  db.py  df.csv  dsd.csv  nep.py  neptune.py  project.py  project_add_data_h5once.py  project_bk.py  project_works.py  trainer.py  training.py  training_batch_finder_setup.py  training_bk.py  transfer.py  troubleshooting.py  (+4 more)
nbs/: 1_analyze_dataset.sync.ipynb  2_resample_dataset.sync.ipynb  3_training_using_excel.sync.ipynb  4_training_using_raytune.sync.ipynb  5_inference.sync.ipynb  common_imports.py  config-test.yaml
templates/: config.yaml  mask_labels.json
tests/: test_pipeline_test.py  test_wandb_run_names.py
(+7785 files in other folders)
