[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fran"
description = "FRAN: utilities and pipelines for medical image segmentation and analysis."
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]

authors = [{ name = "Usman Bashir" }]
license = { text = "MIT" }

dependencies = [
  "batchgenerators>=0.25",
  "connected-components-3d>=3.17",
  "fastcore>=1.7.29",
  "h5py>=3.8",
  "itk>=5.4",
  "numpy>=1.23,<3",
  "openpyxl>=3.1",
  "opencv-python>=4.8",
  "pandas>=1.5",
  "paramiko>=3.0",
  "Pillow>=10.0",
  "psutil>=5.9",
  "PyYAML>=6",
  "reportlab>=4.0",
  "scikit-image>=0.21",
  "scipy>=1.10",
  "send2trash>=1.8",
  "SimpleITK>=2.3",

  "dicom_utils @ git+https://github.com/drusmanbashir/dicom_utils.git@main",
  "label_analysis @ git+https://github.com/drusmanbashir/label_analysis.git@main",
  "utilz @ git+https://github.com/drusmanbashir/utilz.git@main",
]

[project.optional-dependencies]
train = [
  "lightning>=2.2",
  "monai>=1.3",
  "nnunet>=1.7",
  "prefetch-generator>=1.0.3",
  "torch>=2.2",
  "torchaudio>=2.2",
  "torchinfo>=1.8",
  "torchio>=0.20",
  "torchmetrics>=1.3",
  "torchvision>=0.17",
]
tracking = [
  "neptune>=1.10",
  "plotly>=5.0",
  "seaborn>=0.12",
]
detection = [
  "grad-cam>=1.5.3",
  "roboflow>=1.1.30",
  "supervision>=0.25.1",
  "ultralytics>=8.0",
]
geom = [
  "gudhi>=3.10.1",
  "nurbspy>=1.1.2",
]
tuning = [
  "ray[tune]>=2.9",
]
remote = [
  "xnat @ git+https://github.com/drusmanbashir/xnat.git@main",
]
deepcore = [
  "numpy>=1.23,<3",
  "prefetch-generator>=1.0.3",
  "requests>=2.31",
  "scipy>=1.10",
  "torch>=2.2",
  "torchvision>=0.17",
]
full = [
  "fran[train,tracking,detection,geom,tuning]",
]

[tool.setuptools.packages.find]
include = ["fran*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
fran = ["templates/*.yaml", "templates/*.yml"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
fallback_version = "0.1.0"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["monai.*", "lightning.*", "fastcore.*", "plotly.*", "utilz.*"]
ignore_missing_imports = true
